WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187663
REGRESSION (
r231676
): watchOS WebKit usually doesn't load in the background
https://bugs.webkit.org/show_bug.cgi?id=187663
Summary
REGRESSION (r231676): watchOS WebKit usually doesn't load in the background
Tim Horton
Reported
2018-07-13 14:46:44 PDT
REGRESSION (
r231676
): watchOS WebKit usually doesn't load in the background
Attachments
Patch
(1.90 KB, patch)
2018-07-13 14:47 PDT
,
Tim Horton
cdumez
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-07-13 14:47:32 PDT
Created
attachment 344985
[details]
Patch
EWS Watchlist
Comment 2
2018-07-13 14:49:22 PDT
Attachment 344985
[details]
did not pass style-queue: ERROR: Source/WebKit/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2018-07-13 14:54:07 PDT
Comment on
attachment 344985
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-07-13 15:11:32 PDT
Comment on
attachment 344985
[details]
Patch Rejecting
attachment 344985
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 344985, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/8529658
Chris Dumez
Comment 5
2018-07-13 15:14:15 PDT
Comment on
attachment 344985
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344985&action=review
> Source/WebKit/ChangeLog:4 > + Need the bug URL (OOPS!).
Looks wrong :D
Tim Horton
Comment 6
2018-07-13 15:29:22 PDT
(In reply to Chris Dumez from
comment #5
)
> Comment on
attachment 344985
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=344985&action=review
> > > Source/WebKit/ChangeLog:4 > > + Need the bug URL (OOPS!). > > Looks wrong :D
Yeah, dumb webkit-patch -g
Tim Horton
Comment 7
2018-07-13 15:34:07 PDT
https://trac.webkit.org/changeset/233818/webkit
Tim Horton
Comment 8
2018-07-13 15:42:34 PDT
<
rdar://problem/42181185
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug