REGRESSION (r231676): watchOS WebKit usually doesn't load in the background https://bugs.webkit.org/show_bug.cgi?id=187663 <rdar://problem/42181185>

Reviewed by Chris Dumez.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::applicationDidEnterBackground):
"Screen lock" is very aggressive on watchOS; we want to do our usual
30 seconds of loading in the background when you drop your wrist,
so disable this power optimization on that platform.


Canonical link: https://commits.webkit.org/202869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233818 268f45cc-cd09-0410-ab3c-d52691b4dbfc